<resources>
    <string name="app_name">SysCOVID19</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_news">疫情新闻</string>
    <string name="title_data">疫情数据</string>
    <string name="title_graph">疫情图谱</string>
    <string name="title_cluster">新闻聚类</string>
    <string name="title_scholar">知疫学者</string>
    <string name="search_hint">请输入关键词</string>
    <string name="news_menu_return">设置分类列表</string>
    <string name="news_item_news">新闻</string>
    <string name="news_item_paper">论文</string>
    <string name="news_item_event">事件</string>
    <string name="news_item_point">要点</string>
    <string name="menu_left">点击删除分类</string>
    <string name="menu_right">点击添加分类</string>
    <string name="news_detail_exit">退出</string>
    <string name="news_detail_share">分享</string>
    <string name="news_unable_refresh">刷新失败，请检查网络连接</string>
    <string name="news_unable_search">搜索无结果，下拉进行更多搜索</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graph_title">融合、开源的知识图谱</string>
    <string name="cluster_data">{"data":[{"name":"测试","item":[{"title":"测试一号新闻","date":"20202020"},{"title":"测试二号新闻","date":"20202020"}]}]}</string>
    <string name="graph_text">为了对抗新型冠状病毒（COVID-19）,全世界的科研人员、医疗人员、政府工作人员和公众渴望获得开放、全面的新冠知识。AMiner收集整理了现有COVID-19开放知识图谱，并进一步融合了它们，构建了一个大规模、结构化新冠知识图谱(COKG-19)。目前，COKG-19包含了505个概念、393个属性、26282个实例和32352个知识三元组，覆盖了医疗、健康、物资、防控、科研和人物等。此外，COKG-19是一个中英文双语知识图谱。\nCOKG-19旨在帮助发布者和科研人员识别和链接文本中的语义知识，并提供更多智能服务和应用。我们将融合更多的开放知识，以不断更新COKG-19。</string>
</resources>