<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_baseline_radio_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_baseline_remove_red_eye_24"
        android:title="@string/title_data" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_baseline_policy_24"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_cluster"
        android:icon="@drawable/ic_baseline_group_work_24"
        android:title="@string/title_cluster" />

    <item
        android:id="@+id/navigation_scholar"
        android:icon="@drawable/ic_baseline_school_24"
        android:title="@string/title_scholar" />

</menu>