<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.java.youyilin.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_data"
        android:name="com.java.youyilin.ui.data.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.java.youyilin.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />
</navigation>